# vgg19-Style-Transfer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: experiments.html  experiments.ipynb
src/: __init__.py  image_utils.py  losses.py  main.py  model.py  transfer.py
